# Cryptobox-rust

./: .appveyor.yml  .travis.yml  Cargo.toml  LICENSE BSD 2-CLAUSE.md  README.md  build.rs
bindgen/: bindgen.rs  bindgen.sh
src/: cryptobox.rs  key.rs  main.rs  sodium.rs  sodium_bindings.rs
tests/: data.0.ciphertext  data.0.plaintext  data.1.ciphertext  data.1.plaintext  data.2.ciphertext  data.2.plaintext  data.3.ciphertext  data.3.plaintext  data.4.ciphertext  data.4.plaintext  data.5.ciphertext  data.5.plaintext  test_predefined.rs  test_random.rs
