[package]
name = "cryptobox"
edition = "2021"
version = "0.2.0"
authors = ["Keziah Biermann <development@kizzycode.de>"]
description = "A KISS CLI-wrapper around libsodium's `cryptobox_easy`"
categories = ["cryptography"]
keywords = ["security", "cryptography", "libsodium", "cryptobox"]
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/Cryptobox"
readme = "README.md"


[badges]
travis-ci = { repository = "KizzyCode/Cryptobox" }
appveyor = { repository = "KizzyCode/Cryptobox" }


[[bin]]
name = "cryptobox"


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true


[features]
default = []
maproper = ["ma_proper"]
maproper-volatile = ["ma_proper/volatile_fallback"]


[dependencies]
ma_proper = { version = "1.0.0", optional = true }

[build-dependencies]
pkg-config = "0.3"
